--- a/public/css/general.css
+++ b/public/css/general.css
@@ -1,26 +1,22 @@
-.background-purple{
+.background-purple {
     background: #842180;
+}.background-purple1 {
+    background: #842180CC;
 }
-.content-width{
+
+.content-width {
     min-width: 1000px;
 }
-.card{
+
+.card {
     width: 100%;
 }
-.input-group{
+.book-thumbnail{
+    height: 150px;
+    width: auto;
+}
+.input-group {
     max-width: 400px;
     border: 2px #DBDBDB;
 }
-.btn-bd-primary {
-    --bs-btn-font-weight: 600;
-    --bs-btn-color: var(--bs-white);
-    --bs-btn-bg: var(--bd-violet-bg);
-    --bs-btn-border-color: var(--bd-violet-bg);
-    --bs-btn-hover-color: var(--bs-white);
-    --bs-btn-hover-bg: #{shade-color($bd-violet, 10%)};
-    --bs-btn-hover-border-color: #{shade-color($bd-violet, 10%)};
-    --bs-btn-focus-shadow-rgb: var(--bd-violet-rgb);
-    --bs-btn-active-color: var(--bs-btn-hover-color);
-    --bs-btn-active-bg: #{shade-color($bd-violet, 20%)};
-    --bs-btn-active-border-color: #{shade-color($bd-violet, 20%)};
-}
+
