--- a/public/frontend/css/home.css
+++ b/public/frontend/css/home.css
@@ -298,7 +298,55 @@ header{
   transform: translateX(100%);
   opacity: 0;
 }
+    /*=================PROFILE==============*/
+.profile{
+    text-align: center;
 
+    color: var(--main-color);
+
+    position: absolute;
+    background-color: var(--light-bg);
+    border-radius: 1rem;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    min-width: 250px;
+    max-width: 280px;
+    overflow: hidden;
+
+    right: 1.5rem;
+    top: 110%;
+
+    transform-origin: top right;
+    transform: scale(0);
+    transition: .2s linear;
+
+    img{
+        max-width: 100px;
+        max-height: 100px;
+        border-radius: 50%;
+    }
+    .btn-order{
+        background-color: var(--main-color);
+        color: var(--white-color);
+        border-radius: .5rem;
+    }
+    .btn-logout{
+        border : 3px solid var(--main-color);
+        color: var(--dark-color);
+        border-radius: .5rem;
+    }
+    a{
+        color: var(--main-color);
+    }
+    .name{
+        color: var(--main-color-dark);
+        font-weight: bold;
+    }
+}
+
+.profile.show {
+    transform: scale(1);
+}
 /*=================MAIN ================*/
 .main{
    overflow: hidden;
