--- a/public/assets/css/styles_1.css
+++ b/public/assets/css/styles_1.css
@@ -32,10 +32,10 @@ body {
     background-color: #111;
 }
 
-.row row-cols-4 {
-    max-height: 700px;
-    min-width: 600px;
-}
+/*.row row-cols-4 {*/
+/*    max-height: 700px;*/
+/*    min-width: 600px;*/
+/*}*/
 
 .product-card-img img {
     margin-top: 7%;
