--- a/public/frontend/css/header.css
+++ b/public/frontend/css/header.css
@@ -197,7 +197,7 @@ header{
    font-weight: bold;
  }
 
-.dropdown {
+.dropdown1 {
   position: absolute;
   background-color: var(--white-color);
   border-radius: 1rem;
